--- a/config
+++ b/config
@@ -115,11 +115,11 @@ bindsym $mod+$alt+e exec i3-msg exit
 set $ws1 "[1]  terminals"
 set $ws2 "[2]  chrome"
 set $ws3 "[3]  files"
-set $ws4 "[4]  ide"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
+set $ws4 "[4] "
+set $ws5 "[5] "
+set $ws6 "[6]"
+set $ws7 "[7]"
+set $ws8 "[8]"
 set $ws9 "[9]  music"
 
 # switch to workspace
