--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ floating_modifier $mod
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id rofi -mode -show drun
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -79,7 +79,9 @@ bindsym $mod+a focus parent
 # bindsym $mod+d focus chilid
 
 # exec apps
-exec picom # picom compositor (visual effects)
+exec picom
+exec volumeicon
+exec feh --bg-scale /home/alexi3s/Images/Wallpapers/wallpaper2.webp
 exec --no-startup-id volumeicon
 
 # open apps
@@ -87,7 +89,7 @@ bindsym $mod+Return workspace $ws1 exec alacritty
 bindsym $mod+F2 workspace $ws2 exec google-chrome-stable
 bindsym $mod+F3 workspace $ws3 exec nautilus
 bindsym $mod+F4 workspace $ws4 exec code
-bindsym $mod+F9 workspace $ws9 exec spotify
+bindsym $mod+F9 workspace $ws9 exec LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify 
 
 # exit and lock session
 bindsym $mod+$alt+l exec dm-tool lock
@@ -95,37 +97,37 @@ bindsym $mod+$alt+e exec i3-msg exit
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "[1]  terminals"
-set $ws2 "[2]  chrome"
-set $ws3 "[3]  files"
-set $ws4 "[4]  ide"
-set $ws5 "[5] "
-set $ws6 "[6]"
-set $ws7 "[7]"
-set $ws8 "[8]"
-set $ws9 "[9]  music"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
 
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -165,6 +167,6 @@ bar {
 ######################################################################################################
 
 gaps inner 10
-gaps outer 10
+gaps outer 5
 default_border pixel 0
 smart_gaps off
