--- a/i3/config
+++ b/i3/config
@@ -80,16 +80,16 @@ bindsym $mod+a focus parent
 
 # exec apps
 exec picom
-exec volumeicon
-exec feh --bg-scale /home/alexi3s/Images/Wallpapers/wallpaper2.webp
 exec --no-startup-id volumeicon
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec $HOME/.fehbg
 
 # open apps
 bindsym $mod+Return workspace $ws1 exec alacritty
 bindsym $mod+F2 workspace $ws2 exec google-chrome-stable
-bindsym $mod+F3 workspace $ws3 exec nautilus
+bindsym $mod+F3 workspace $ws3 exec ranger 
 bindsym $mod+F4 workspace $ws4 exec code
-bindsym $mod+F9 workspace $ws9 exec LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify 
+bindsym $mod+F9 workspace $ws9 exec spotify-launcher 
 
 # exit and lock session
 bindsym $mod+$alt+l exec dm-tool lock
@@ -157,14 +157,13 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command SCRIPT_DIR=~/.config/i3blocks/scripts i3blocks
-	height 20
-	}
+#bar {
+#       status_command polybar 
+#}
 
-######################################################################################################
-#                                                   GAPS
-######################################################################################################
+
+# GAPS #                                            
+########
 
 gaps inner 10
 gaps outer 5
